@@ -38,6 +38,9 @@ bzr-svn 0.5.3                   UNRELEASED
 
    * Fix recognition of v3 mappings pushed with incomplete revision properties.
 
+   * Print proper error when a part of the repository is inaccessible during 
+     fetch. (#323084)
+
   PERFORMANCE
 
    * Significant speed improvements when no (old) tags have to be fetched. Requires 
